[package]
name = "ic_codec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-base-types = { git = "https://github.com/dfinity/ic" }
ledger-canister = { git = "https://github.com/dfinity/ic" }
base32 = "0.4.0"